# Line-Segment-Detector-using-OpenCV

./: CMakeLists.txt  README.md  detection.cpp  detection.hpp  main.cpp
Detection/: lsd.cpp  lsd.h
